--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,54 @@
+# Dependencies
 node_modules
+.pnp
+.pnp.js
+
+# Build outputs
 .next
+out
+build
+dist
+
+# Git
 .git
 .gitignore
-*.md
-.env*
+
+# IDE
+.idea
+.vscode
+*.swp
+*.swo
+
+# OS
 .DS_Store
+Thumbs.db
+
+# Environment files
+.env
+.env.*
+!.env.example
+
+# Documentation (not needed in container)
+*.md
+docs/
+
+# Test files
+__tests__
+*.test.*
+*.spec.*
+coverage
+
+# Misc
+.turbo
+.vercel
+.netlify
 nixpacks.toml
+docker-compose*.yml
 
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-
+# TypeScript cache
+*.tsbuildinfo
